Added Downloadable CV

--- a/portfolio.html
+++ b/portfolio.html
@@ -540,7 +540,7 @@
             Get a complete overview of my experience, skills, and achievements
             in a comprehensive PDF format.
           </p>
-          <a href="#" class="download-btn">
+          <a href="assets/CV-Tharindu.pdf" Download class="download-btn">
             <i class="fas fa-download"></i>
             Download CV (PDF)
           </a>
